[package]
name = "doxa-sherry-alarm"
version = "0.1.0"
description = "yeah."
repository = "https://github.com/misilelab/rust-template"
documentation = "https://docs.rs/rust-template"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.15.0"
notify-rust = "4.5.8"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
clap = { version = "3.2.8", features = ["derive", "unstable-v4"] }